Salesforce CPQ/main/default/objects/ImportColumn__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This column represents a unique key column.</description>
    <inlineHelpText>Select if this column should be a unique key column.</inlineHelpText>
    <label>Key</label>
    <type>Checkbox</type>
</CustomField>