Salesforce CPQ/main/default/objects/ImportColumn__c/validationRules/Column_index_must_start_from_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Column_index_must_start_from_1</fullName>
    <active>true</active>
    <description>Column Index must start from 1.</description>
    <errorConditionFormula>If ( ColumnIndex__c &lt;= 0, true, false)</errorConditionFormula>
    <errorDisplayField>ColumnIndex__c</errorDisplayField>
    <errorMessage>Column Index must start from 1.</errorMessage>
</ValidationRule>